Refactor references to sun.misc.SharedSecrets
This fixes:

[javac] src/classes/modules/java.base/sun/reflect/annotation/AnnotationType.java:28: error: cannot find symbol
[javac] import sun.misc.SharedSecrets;
[javac]                ^
[javac]   symbol:   class SharedSecrets
[javac]   location: package sun.misc

[javac] src/classes/modules/java.base/java/lang/System.java:27: error: cannot find symbol
[javac] import sun.misc.SharedSecrets;
[javac]                ^
[javac]   symbol:   class SharedSecrets
[javac]   location: package sun.misc

[javac] src/classes/modules/java.base/sun/reflect/annotation/AnnotationType.java:52: error: cannot find symbol
[javac]     AnnotationType at = SharedSecrets.getJavaLangAccess().getAnnotationType(annotationClass);
[javac]                         ^
[javac]   symbol:   variable SharedSecrets
[javac]   location: class AnnotationType

[javac] src/classes/modules/java.base/sun/reflect/annotation/AnnotationType.java:97: error: cannot find symbol
[javac]     SharedSecrets.getJavaLangAccess().setAnnotationType(annoCls, this);
[javac]     ^
[javac]   symbol:   variable SharedSecrets
[javac]   location: class AnnotationType

[javac] src/classes/modules/java.base/java/lang/System.java:61: error: cannot find symbol
[javac]     SharedSecrets.setJavaLangAccess( createJavaLangAccess());
[javac]     ^
[javac]   symbol:   variable SharedSecrets
[javac]   location: class System

Fixes: #31